-
Bug
-
Resolution: Done
-
P1: Critical
-
5.2.0 Alpha
-
None
-
-
61547c8e43390a36a2cda0ca6856e2f0f53547c0 b257f33b97251a3e266e04574c09ebebdae7ac8f
When build for x86 with androiddeployqt in Qt Creator, it will fail with the following error messages:
Command does not exist: /home/eblomfel/android-ndk-r9/toolchains/x86-4.8/prebuilt/linux-x86/bin/x86-readelf Command does not exist: /home/eblomfel/android-ndk-r9/toolchains/x86-4.8/prebuilt/linux-x86/bin/x86-strip
I'm not sure if Creator is setting the wrong prefix or if androiddeployqt is doing something wrong, so that needs to be checked.
- is required for
-
QTBUG-33305 Issues to be fixed before Qt5.2 Beta1 release
-
- Closed
-
| For Gerrit Dashboard: QTBUG-34110 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 68355,1 | androiddeployqt: Use correct prefix for tools on x86 | stable | qt/qttools | Status: MERGED | +2 | 0 |
| 68357,1 | Output prefix for tools on x86 | stable | qt/qtbase | Status: MERGED | +2 | 0 |