androiddeployqt: Use correct prefix for tools on x86

When building for x86, the prefix for the tools is not equal
to the prefix for the toolchain directory, so we need a separate
option for this.

Task-number: QTBUG-34110
Change-Id: I72d727832dd4a5f11952c84882496f85075cd9cd
Reviewed-by: BogDan Vatra <bogdan@kde.org>